Password reset implementation

--- a/src/templates/email_confirmation.html.twig
+++ b/src/templates/email_confirmation.html.twig
@@ -5,7 +5,7 @@
     <p>Thank you for signing up for StudentTeacher project.</p>
 
     <p>As an extra security measure, please verify this is the correct email address linked to your account by clicking
-        this <b></b><a href="{{ url_confirmation }}">url</a></b>.
+        this <b><a href="{{ url_confirmation }}">url</a></b>.
     </p>
 
     <p>Best wishes</p>
